# wandb-fully-connected-2025-karakuri-workshop

./: .gitignore  Makefile  README.md  cspell.json  env.example  pyproject.toml
.streamlit/: config.toml
data/: eval-onboarding.csv  faq-embedding.csv  faq.csv  feedback-logs.csv
notebooks/: workshop.ipynb
src/: chat.py  client.py  config.py  prompt_improvement.py  prompts.py  run_evaluation.py  run_improvement.py  tools.py
